Move permanent_api_token from user into token, remove token ids (use user id), add PUT /users/<id>/api-token to change if token is permanent and fix some permission issues
