# docs/swagger.json
@@ -868,7 +868,7 @@
                 "summary": "Create user",
                 "parameters": [
                     {
-                        "description": "Username, Password, Email, PermanentAPIToken",
+                        "description": "Username, Password, Email",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -964,7 +964,7 @@
                         "required": true
                     },
                     {
-                        "description": "Username, Password, Email, PermanentAPIToken",
+                        "description": "Username, Password, Email",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -1047,6 +1047,48 @@
                     "Users"
                 ],
                 "summary": "Get a user's API token",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "put": {
+                "description": "Given a valid user id and new permanent status, sets the permanent status for the users current token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update a user's API token (set permanent)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1218,9 +1260,6 @@
                 "password": {
                     "type": "string"
                 },
-                "permanent_api_token": {
-                    "type": "boolean"
-                },
                 "username": {
                     "type": "string"
                 }
@@ -1342,9 +1381,8 @@
                 "expires_at": {
                     "type": "string"
                 },
-                "id": {
-                    "description": "id (primary key)",
-                    "type": "integer"
+                "permanent": {
+                    "type": "boolean"
                 },
                 "updated_at": {
                     "description": "ISO 8601 datetime",
@@ -1391,10 +1429,6 @@
                 "last_login": {
                     "description": "ISO 8601 datetime TODO: redundant with UpdatedAt but only because LastLogin is updated on login",
                     "type": "string"
-                },
-                "permanent_api_token": {
-                    "description": "if set the users API token never automatically expires",
-                    "type": "boolean"
                 },
                 "registration_key": {
                     "description": "omitted if null (when user was created and not registered or when list of users is queried to not leak other users keys)",
